<resources>
    <string name="app_name">forHeart</string>
    <string name="title_home">Home</string>
    <string name="title_food">Nutrition</string>
    <string name="title_fitness">Fitness</string>
    <string name="title_list">Food List</string>
    <string name="nav_food_id">food_id</string>
    <string name="nav_food_group_id">group_id</string>
    <string name="nav_plan_id">plan_id</string>
    <string name="activity_type">activity_type</string>
    <string name="contact_information">If you cannot find the food you want or have any comments on us, please send us an email to the address attached below.</string>
    <string name="healthy_message">This food is very healthy for your cardiovascular system and can be consumed regularly.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edittext_hint">Tell us something here</string>
    <string name="plan_step_1">Select your prefer style</string>
    <string name="plan_step_2">Exercise details</string>
    <string name="food_type_good">Good for Heart !</string>
    <string name="food_type_normal">Not bad !</string>
    <string name="food_type_bad">No help for heart !</string>
    <string name="food_message_good">This food is very healthy for your cardiovascular system and can be consumed regularly.</string>
    <string name="food_message_normal">This food is good for heart. You may find more healthy food in recommendation below.</string>
    <string name="food_message_bad">This food is not good enough for heart health, find other food in our database.</string>
    <string name="motivation_new">Welcome to a new week! Click the add button below to make new plans</string>
    <string name="motivation_half">Keep going! Try to hit 100% of progress for the workout task this week</string>
    <string name="motivation_done">Good job! You have finished the workout task this week. Take more exercise if you like</string>
    <string name="explain_normal">Normal task - recommended for most people\n    300 min moderate or 175 min vigorous activities</string>
    <string name="explain_heavy">Heavy task - for the young\n    420 min moderate or 250 min vigorous activities</string>
    <string name="explain_light">Light task - for everyone, just moving!\n    180 min moderate or 100 min vigorous activities</string>
    <string name="tips_two">Reducing the consumption of highly processed foods is very useful for your heart. Currently, up to 35% of the average Australian diet consists of highly processed foods, such as:
        \n\nBaked goods cakes, cookies and pastries;
        \nchocolate;
        \nPotato chips;
        \nlollipop;
        \nSugary drinks, soft drinks, energy drinks, sports drinks;
        \nTake away food such as pizza burgers.
        \n\nThese foods are usually rich in sugar, salt, saturated fat and trans fat, so they are not a heart-healthy diet. Try to eat these foods only occasionally in small amounts.</string>
    <string name="tips_three">Many factors are related to the accumulation of fat accumulation in the coronary arteries, including smoking, lack of physical activity and a family history of the disease.
        \n\nOther risk factors include:
        \nTypes of fat eaten-saturated fat and trans fat increase blood cholesterol and heart attack rate. Polyunsaturated and monounsaturated fats can reduce the risk of heart attack.
        \n\nObesity-Many overweight and obese people have high levels of fat in their diet, especially saturated fat. People who have a lot of fat around their stomachs ("apple" -shaped bodies) are at greater risk of heart disease than those who pile fat on their bottoms, around their hips and thighs (pear-shaped bodies).
        \n\nHypertension-Blood pressure refers to the pressure within the arteries (the blood vessels that transport blood to the body). Hypertension means that the pressure in the arteries is higher than normal. This may be because the arteries are less elastic, the blood volume is larger, or more blood is pumped from the heart.</string>
    <string name="tips_four">Including physical exercise
        \n\nExercise is essential to reduce the risk of heart disease. Walking at a violent speed for at least 30 minutes a day (at least 4 km per hour) can reduce the risk of heart disease by 30%. How do you record your exercise time and get health reminders every day? Try our workout function every day, you can get more help, and for heart for good.
        \n\nIf you are over 40 years old, have heart disease or have not exercised for a long time, please consult your doctor before starting any exercise program.</string>
    <string name="about_us">Welcome to forHeart, your number one source for all foods and workout that good to your heart. We\'re dedicated to giving you the very best of app, with a focus on foods\' nutrition and different workouts that good for your heart.
    \n\nFounded in 2020 by HearTechb1 Team, forHeart has come a long way from its beginnings in Melbourne. When we first started out, we passion for \"for heart, for good\" drove we to collect health data that are beneficial to your cardiovascular system, so that forHeart can offer you a healthy lifestyle.
    \n\nWe hope you enjoy our products as much as we enjoy offering them to you. If you have any questions or comments, please don\'t hesitate to contact us.
    \n\nSincerely, \nforHeart app, HearTechb1 Team </string>
    <string name="rights">Mobile Application Developer owns the forHeart Application intellectual property rights and all rights in and in connection with these properties, title, and interest will remain (between the parties) solely with Mobile Application Developer. All logos used in combination with our mobile applications or services are designed by the designer Elsie. Other service marks and graphics are copyrighted from the Internet.</string>
    <string name="tips_one_dietary_fibre">A high-fiber diet appears to reduce risk of developing diabetes, diverticular disease, constipation and colon cancer. Fiber also slows digestion, which means it helps you feel fuller, longer – which may help you eat fewer calories and control your weight. Dietary fiber is material from plant cells which has two important types of fiber: water-soluble and water insoluble. Soluble fiber in particular decreases blood cholesterol. Fruits, vegetables, legumes, barley, oats and oat bran are good sources of soluble fiber.Total dietary fiber intake should be at least 25 to 30 grams a day from food, not supplements.</string>
    <string name="tips_one_total_omega3">Omega3 decrease triglycerides and increase HDL-cholesterol levels, improves blood vessel elasticity and thins the blood, making it less likely to clot and block blood flow.</string>
    <string name="tips_one_folic_acid">It lowers the risk of stroke 12% by lowering homocysteine levels in the blood and reducing artery wall thickening. Amaranth greens, spinach, mint, Bengal gram, green gram, black gram and soy are good sources of folic acid.</string>
    <string name="tips_one_monounsaturated">Also known as MUFA, they are healthy for the heart. Monounsaturated fats are known to lower LDL cholesterol and increase HDL cholesterol and could replace saturated fats and trans fat. Amongst the cooking oils, olive oil, canola oil, peanut oil, safflower oil and sesame oil are sources of MUFA. Other sources include nuts like almonds, peanuts, walnuts and avocados. These nuts also provide nutrients other than healthy oils that are heart protective too.</string>
    <string name="tips_one_lycopene">It is an antioxidant ( that provides tomatoes its red colour). A number of clinical studies have established its protective role in lowering blood pressure and C reactive protein- a marker of cardiac inflammation.</string>
    <string name="tips_one_magnesium">It is necessary for more than 300 biochemical reactions in the body. It helps maintain nerve and muscle function, keeps the heart rhythm stable, and maintains blood pressure among other functions. Large intake of magnesium is associated with reduced risk of CVD and IHD. Whole grains, black beans, soybeans and tofu, almonds, pumpkin seeds, sesame seeds and spinach are the best sources of magnesium.</string>
    <string name="tips_one_total_Folates">A water-soluble B-vitamin that helps lower the blood levels of the amino acid homocysteine which is linked to an increased risk of heart disease. These vitamins can participate in homocysteine metabolism and provide protection against stroke and reduce the risk of cardiovascular disease by reducing homocysteine levels.</string>
    <string name="tips_one_Potassium">Potassium can maintain a stable heart rhythm. One of the risk factors for atrial fibrillation: The common irregular new green may be related to insufficient or excessive potassium intake. We recommend that you consume at least 4700 mg of potassium in your daily diet.</string>
</resources>
